--- a/style.css
+++ b/style.css
@@ -3,11 +3,80 @@
     margin: 0;
     padding: 0;
     font-family: Ubuntu, Poppins, Roboto, Inter;
+    transition: all 0.25s ease-in-out;
+    color: white;
+    /* border: 1px solid white; */
+}
+.flex-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 body {
-    background-image: url("https://images.pexels.com/photos/11829357/pexels-photo-11829357.jpeg");
+    background-color: black;
+    /* background-image: url("https://images.pexels.com/photos/3780104/pexels-photo-3780104.png"); */
     background-size: cover;
 }
+body video {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.25;
+    z-index: -1;
+}
 header {
-
+    width: 40%;
+    height: 10rem;
+}
+header div {
+    gap: 2.5rem;
+    padding: 1rem 3rem;
+    height: 6rem;
+    border-radius: 3rem;
+    background-color: rgba(100, 100, 100, 0.25);
+    backdrop-filter: blur(12px);
+    box-shadow: 0 0 15px inset #777, 0 0 30px black;
+}
+header a {
+    font-size: 2.25rem;
+    font-weight: 500;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+}
+header a:hover {
+    border-bottom: 2px solid white;
+}
+main h1 {
+    margin-top: 10rem;
+    font-size: 8rem;
+}
+#hero {
+    width: 60%;
+}
+#hero p {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    width: 50%;
+    color: #ccc;
+}
+#hero button {
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: rgb(115, 2, 121);
+    border: 2px solid transparent;
+    box-shadow: 0 0 30px transparent;
+    border-radius: 1rem;
+    font-size: 2rem;
+    font-weight: 500;
+}
+#hero button:hover {
+    border: 2px solid white;
+    box-shadow: 0 0 10px 1px white;
 }
