--- a/style.css
+++ b/style.css
@@ -48,12 +48,15 @@ header a {
     font-size: 2.25rem;
     font-weight: 500;
     text-decoration: none;
-    border-bottom: 2px solid transparent;
+    border-radius: 2rem;
+    padding: 0.5rem 1rem; 
+    border: 2px solid transparent;
 }
 header a:hover {
-    border-bottom: 2px solid white;
+    background-color: rgba(150, 150, 150, 0.25);
+    border: 2px solid white;
 }
-main h1 {
+#hero h1 {
     margin-top: 10rem;
     font-size: 8rem;
 }
@@ -71,7 +74,7 @@ main h1 {
     padding: 1rem;
     background-color: rgb(115, 2, 121);
     border: 2px solid transparent;
-    box-shadow: 0 0 30px transparent;
+    box-shadow: 0 0 10px 1px transparent;
     border-radius: 1rem;
     font-size: 2rem;
     font-weight: 500;
