--- a/style.css
+++ b/style.css
@@ -176,3 +176,22 @@ header a:hover {
     padding: 1rem;
     color: #ccc;
 }
+#contactUs p {
+    margin-top: 2rem;
+    font-size: 2rem;
+    text-align: center;
+    color: #ccc;
+}
+footer {
+    margin-top: 12rem;
+    width: 100%;
+    height: 8rem;
+    background-color: black;
+}
+#footerBox {
+    width: 40%;
+    justify-content: space-between;
+}
+#footerBox div {
+    gap: 1rem;
+}
