--- a/style.css
+++ b/style.css
@@ -53,14 +53,10 @@ header a {
     font-size: 2.25rem;
     font-weight: 500;
     text-decoration: none;
-    border-radius: 2rem;
-    padding: 0.5rem 1rem; 
-    border: 2px solid transparent;
+    border-bottom: 2px solid transparent;
 }
 header a:hover {
-    background-color: rgba(150, 150, 150, 0.25);
-    border: 2px solid #aaa;
-    box-shadow: 0 0 10px 1px #aaa;
+    border-bottom: 2px solid white;
 }
 #hero h1 {
     font-size: 8rem;
