--- a/style.css
+++ b/style.css
@@ -25,7 +25,10 @@ body {
     background-size: cover;
 }
 body video {
-    width: 100%;
+    width: 100dvw;
+    height: 100dvh;
+    object-fit: cover;
+    object-position: center;
     position: fixed;
     top: 0;
     left: 0;
@@ -36,7 +39,7 @@ header {
     position: sticky;
     top: 0;
     left: 0;
-    width: 40%;
+    width: 90rem;
     height: 10rem;
     z-index: 1;
 }
@@ -58,13 +61,16 @@ header a {
 header a:hover {
     border-bottom: 2px solid white;
 }
+#hero {
+    align-items: flex-start;
+}
 #hero h1 {
     font-size: 8rem;
 }
 .sections {
     scroll-margin-top: 14rem;
     margin-top: 8rem;
-    width: 60%;
+    width: 90rem;
 }
 #hero p {
     margin-top: 1rem;
@@ -96,20 +102,20 @@ header a:hover {
     box-shadow: 0 0 15px inset #777, 0 0 30px black;
     padding: 3rem;
 }
-#collage, #collage div {
+#collage,
+#collage div {
     gap: 2rem;
 }
 #collage img {
     height: 26rem;
     border-radius: 2rem;
 }
-#collage div img  {
+#collage div img {
     height: 12rem;
 }
 #chooseUsTextArea {
     align-items: flex-start;
     padding: 1rem 3rem;
-    
 }
 .sectionTitle {
     font-size: 6rem;
@@ -118,7 +124,7 @@ header a:hover {
     font-size: 2rem;
     color: #bbb;
 }
-#internshipCardsHolder, #featuresHolder {
+#internshipCardsHolder {
     width: 100%;
     padding: 3rem;
     flex-wrap: wrap;
@@ -136,10 +142,11 @@ header a:hover {
 .internshipCards h1 {
     font-size: 1.75rem;
 }
-.internshipCards h1, .internshipCards ul, .internshipCards a {
+.internshipCards h1,
+.internshipCards ul,
+.internshipCards a {
     width: 90%;
     text-align: center;
-
 }
 .internshipCards ul {
     list-style: none;
@@ -155,6 +162,7 @@ header a:hover {
     border-radius: 2rem;
     background-color: rgb(115, 2, 121);
     width: 75%;
+    font-size: 1.25rem;
     font-weight: 600;
     border: 2px solid transparent;
 }
@@ -175,10 +183,11 @@ header a:hover {
     font-size: 2rem;
 }
 .question p {
+    font-size: 1rem;
     padding: 1rem;
     color: #ccc;
 }
-#contactUs p {
+#contactUs p, #contactUs a {
     margin-top: 2rem;
     font-size: 1.5rem;
     text-align: center;
@@ -191,9 +200,114 @@ footer {
     background-color: black;
 }
 #footerBox {
-    width: 40%;
+    width: 90rem;
     justify-content: space-between;
+}
+#footerBox a, #footerBox p {
+    font-size: 1rem;
 }
 #footerBox div {
     gap: 1rem;
+}
+@media (max-width: 1560px) {
+    * {
+        font-size: 10px;
+    }
+}
+@media (max-width: 1000px) {
+    * {
+        font-size: 8px;
+    }
+}
+@media (max-width: 768px) {
+    * {
+        font-size: 7px;
+    }
+}
+@media (max-width: 540px) {
+    * {
+        font-size: 5.5px;
+    }
+}
+@media (max-width: 430px) {
+    * {
+        font-size: 4px;
+    }
+    .sections {
+        width: 80rem;
+    }
+    header {
+        height: 18rem;
+    }
+    header div {
+        height: 10rem;
+        border-radius: 5rem;
+        padding: 2rem 4rem;
+    }
+    header div a {
+        font-size: 5rem;
+    }
+    #hero {
+        /* text-align: center; */
+        /* align-items: center; */
+        gap: 2rem;
+    }
+    #hero p {
+        font-size: 4rem;
+        width: 100%;
+    }
+    #hero button {
+        font-size: 4rem;
+        border-radius: 2rem;
+    }
+    #chooseUs {
+        flex-direction: row-reverse;
+    }
+    #chooseUsTextArea {
+        padding: 0 1rem 0 0;
+    }
+    #internshipCardsHolder {
+        gap: 4rem;
+    }
+    .internshipCards {
+        width: 60rem;
+        height: 65rem;
+    }
+    .internshipCards h1 {
+        font-size: 4rem;
+    }
+    .internshipCards li {
+        padding: 0.5rem;
+        font-size: 3.5rem;
+        color: #ccc;
+    }
+    .internshipCards a {
+        font-size: 3.5rem;
+    }
+    #questions {
+        gap: 4rem;
+    }
+    .question h1 {
+        font-size: 3.5rem;
+    }
+    .question p {
+        font-size: 2.5rem;
+    }
+    #contactUs p, #contactUs a {
+        font-size: 3rem;
+    }
+    footer {
+        height: 16rem;
+    }
+    #footerBox {
+        width: 80rem;
+        flex-direction: column;
+        gap: 5rem;
+    }
+    #footerBox div {
+        gap: 5rem;
+    }
+    #footerBox a, #footerBox p {
+        font-size: 2.5rem;
+    }
 }
