--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
     height: 10rem;
     z-index: 1;
 }
-header div {
+header nav {
     gap: 2.5rem;
     padding: 1rem 3rem;
     height: 6rem;
@@ -139,6 +139,9 @@ header a:hover {
     backdrop-filter: blur(12px);
     box-shadow: 0 0 15px inset #777, 0 0 30px black;
 }
+.internshipCards:hover {
+    transform: translateY(-10px);
+}
 .internshipCards h1 {
     font-size: 1.75rem;
 }
@@ -210,28 +213,28 @@ footer {
     gap: 1rem;
 }
 @media (max-width: 1560px) {
-    * {
-        font-size: 10px;
+    html {
+        font-size: 62.5%;
     }
 }
 @media (max-width: 1000px) {
-    * {
-        font-size: 8px;
+    html {
+        font-size: 50%;
     }
 }
 @media (max-width: 768px) {
-    * {
-        font-size: 7px;
+    html {
+        font-size: 43.75%;
     }
 }
 @media (max-width: 540px) {
-    * {
-        font-size: 5.5px;
+    html {
+        font-size: 34%;
     }
 }
 @media (max-width: 430px) {
-    * {
-        font-size: 4px;
+    html {
+        font-size: 25%;
     }
     .sections {
         width: 80rem;
@@ -239,17 +242,15 @@ footer {
     header {
         height: 18rem;
     }
-    header div {
+    header nav {
         height: 10rem;
         border-radius: 5rem;
         padding: 2rem 4rem;
     }
-    header div a {
+    header nav a {
         font-size: 5rem;
     }
     #hero {
-        /* text-align: center; */
-        /* align-items: center; */
         gap: 2rem;
     }
     #hero p {
